--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "savvy-starter",
-  "version": "1.0.0",
+  "name": "savvy-spa-starter",
+  "version": "1.0.1",
   "description": "",
+  "type": "module",
   "scripts": {
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
-    "serve": "parcel index.html"
+    "serve": "parcel index.html",
+    "app:watch": "nodemon --watch ./server -e js ./server/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "html-literal": "^1.1.0",
+    "buffer": "^6.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^3.0.1",
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
     "navigo": "^8.11.1",
     "parcel": "^2.9.3"
